--- a/main.html
+++ b/main.html
@@ -7,9 +7,8 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<h1>Why i want to become a developer</h1>
+	<p>I want to become a developer because its my dream, passion.</p>
 
 </body>
 
