--- a/main.html
+++ b/main.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <title>Motivation to Become a Developer</title>
 </head>
-
 <body>
-	<h1>Why i want to become a developer</h1>
-	<p>I want to become a developer because its my dream, passion.</p>
-
+    <h1>Why I want to become a developer?</h1>
+    <p>
+        I want to become a software developer because I enjoy solving problems and building things that have a real impact. Technology allows me to turn ideas into reality, automate tasks, and create solutions that can help people and businesses. Continuous learning, logical thinking, and the ability to work on challenging projects motivate me to grow in this field and build a successful career as a developer.
+    </p>
 </body>
-
 </html>
